# tinydocs

./: Cargo.toml  README.md  iced.tinydocs  smallbox.tinydocs
src/: fetch.rs  main.rs  main_backup.rs  scrape.rs  scrape_backup.rs
