[package]
name = "tinydocs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.17"
htmlentity = "1.3"
regex = "1.9"
html2text = "0.6"
futures = "0.3"
url = "2.4"
html-escape = "0.2"
serde = "*"
serde_json = "1.0"
openai-api-rs = "0.1.8"
dotenv = "0.15.0"

reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
tiktoken-rs = "0.5.0"
